:bug: Fix image size on mobile

--- a/src/modules/work/Work.scss
+++ b/src/modules/work/Work.scss
@@ -42,6 +42,11 @@
       flex-direction: column;
     }
 
+    svg {
+      max-width: 100%;
+      height: auto;
+    }
+
     .project-description {
       h3 {
         margin: 0;
